--- a/index.html
+++ b/index.html
@@ -24,32 +24,40 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text"> ICMR aims to launch indigenous COVID-19 vaccine by August 15.</p>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://m.timesofindia.com/india/icmr-aims-to-launch-indigenous-covid-19-vaccine-by-august-15/amp_articleshow/76764982.cms&ved=2ahUKEwjUjfba2bPqAhUryDgGHfW5D0MQtwIwBHoECAMQAQ&usg=AOvVaw1X7YjForM-LesmORkK_Oh7&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> भारत की पहली सर्टिफाइड चॉकलेट टेस्टर हैं पूनम चोरडिया, पति के चॉकलेट शौक ने उनका करिअर संवार दिया </p>
+          <a href="https://dainik-b.in/l0OvT6QST7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">Goa opens for tourism, hotels to accept guests with bookings</p>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.ndtv.com/india-news/hotels-in-goa-ready-to-reopen-awaiting-governments-covid-19-guidelines-2256061%3Famp%3D1%26akamai-rum%3Doff&ved=2ahUKEwirqqPl27PqAhWjyDgGHa1NDJoQ0PADMAJ6BAgLEA4&usg=AOvVaw39krUzcYjt3KdIINj3KoKj&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">Yes Bank ने शुरू की ‘लोन इन सेकेंड्स’ सुविधा, बिना किसी डॉक्युमेंटेशन के तुरंत मिलेगा लोन </p>
+          <a href="https://dainik-b.in/j0UJA2SPU7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">The decline in gold imports helps in narrowing the country's trade deficit </p>
-          <a href="https://www.google.co.in/amp/s/www.financialexpress.com/market/commodities/covid-19-gold-imports-plunge-but-its-a-good-news-for-india/2012770/lite/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">अगले साल 9वीं-12वीं के लिए 30% कम होगा सिलेबस, 8वीं तक के लिए स्कूल खुद फैसला ले सकेंगे </p>
+          <a href="https://dainik-b.in/mJRvf2r6U7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text"Sports Ministry to remove Rs 2 lakh salary cap for Indian coaches training elite athletes</p>
-          <a href="https://m.hindustantimes.com/other-sports/sports-ministry-to-remove-salary-cap-of-rs-2-lakhs-for-indian-coaches/story-oMq3X399TYIG1BGg8lbQKP_amp.html&ved=2ahUKEwii7YbM3rPqAhXWxTgGHUGEAjcQFjAGegQIBBAB&usg=AOvVaw129gC43kH0nF4ldKeElwzG&ampcf=1" class="btn btn-primary">Learn More</a>
+          <p class="card-text">सीएम के पहल पर अब ‘दिल्ली कोरोना’ एप पर प्रदर्शित होगा सभी अस्पतालों का हेल्पलाइन नंबर </p>
+          <a href="https://dainik-b.in/fm2XKrIsU7" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">5.</h5>
+          <p class="card-text">IIIT-बैंगलोर ने पहली बार आयोजित किया ऑनलाइन दीक्षांत समारोह, 282  ग्रेजुएट स्टूडेंट्स को मिली डिग्री </p>
+          <a href="https://dainik-b.in/q9K7nDKtT7" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
