--- a/index.html
+++ b/index.html
@@ -24,32 +24,48 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">Study Results Say COVID-19 Vaccine Was Effective and Well-Tolerated for Its 45 Adult Participants</p>
-          <a href="https://www.tribuneindia.com/news/health/results-show-moderna-covid-19-vaccine-safe-113237" class="btn btn-primary">Learn More</a>
+          <p class="card-text">40 लाख रुपए तक के कारोबारियों को मिलेगी जीएसटी से छूट।</p>
+          <a href="https://dainik-b.in/X7DbuzcTc9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">Scientists Say Rock Dust Could Remove Billions of Tons of CO2 From the Atmosphere</p>
-          <a href="https://www.goodnewsnetwork.org/rock-dust-on-soil-could-suck-billions-of-tons-of-co2-from-the-air/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">दिल्ली के 12 साप्ताहिक बाजार आज से होंगे शुरू।</p>
+          <a href="hhttps://dainik-b.in/v6aNnVKic9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">Teachers Visit a Bridge Everyday to Create a Classroom for Children of Migrant Workers Stuck in India’s Lockdown.</p>
-          <a href="https://social-tv.co.za/teachers-visit-a-bridge-everyday-to-create-a-classroom-for-children-of-migrant-workers-stuck-in-indias-lockdown/" class="btn btn-primary">Learn More</a>
+          <p class="card-text">आईआईटी बॉम्बे ने आयोजित की वर्चुअल कॉन्वोकेशन सेरेमनी।</p>
+          <a href="https://dainik-b.in/aBjygxrOc9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">Dubai hospital waives off Rs 1.52-crore bill of COVID-19 patient from Telangana</p>
-          <a href="https://www.newindianexpress.com/states/telangana/2020/jul/16/dubai-hospital-waives-off-rs-152-crore-bill-of-covid-19-patient-from-telangana-2170402.html" class="btn btn-primary">Learn More</a>
+          <p class="card-text">ओ एल एक्स ने शुरू किया पहला ऑफलाइन सेकंड हैंड कार प्लेटफॉर्म।</p>
+          <a href="https://dainik-b.in/Hgyo9Afa88" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+    
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">5.</h5>
+          <p class="card-text">नक्शा पास करवाने में जुटा श्री राम जन्म भूमि ट्रस्ट।</p>
+          <a href="https://dainik-b.in/DXOOQS1Wc9" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">6.</h5>
+          <p class="card-text"> ई पोर्टल से जुड़े लोग सीधे अफसर और सरकारी मंत्रियों के आगे रख सकेंगे अपनी समस्या।</p>
+          <a href="https://dainik-b.in/jos1B5Ijc9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
