--- a/index.html
+++ b/index.html
@@ -24,48 +24,48 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">40 लाख रुपए तक के कारोबारियों को मिलेगी जीएसटी से छूट।</p>
-          <a href="https://dainik-b.in/X7DbuzcTc9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">नेशनल टेस्टिंग एजेंसी ने जारी किए नीट यू जी एडमिट कार्ड।</p>
+          <a href="https://dainik-b.in/vks6Eqoag9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">दिल्ली के 12 साप्ताहिक बाजार आज से होंगे शुरू।</p>
-          <a href="hhttps://dainik-b.in/v6aNnVKic9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">उबर ने शुरू की ऑटो रेंटल सेवा।</p>
+          <a href="https://dainik-b.in/E7a8AGIcg9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">आईआईटी बॉम्बे ने आयोजित की वर्चुअल कॉन्वोकेशन सेरेमनी।</p>
-          <a href="https://dainik-b.in/aBjygxrOc9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">महिला समानता दिवस।</p>
+          <a href="https://dainik-b.in/yXAluRjjd9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">ओ एल एक्स ने शुरू किया पहला ऑफलाइन सेकंड हैंड कार प्लेटफॉर्म।</p>
-          <a href="https://dainik-b.in/Hgyo9Afa88" class="btn btn-primary">Learn More</a>
+          <p class="card-text">बीएस 6 इंजन वाली जैज और माराजो हुई लॉन्च</p>
+          <a href="https://dainik-b.in/OnxDIl2hg9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">5.</h5>
-          <p class="card-text">नक्शा पास करवाने में जुटा श्री राम जन्म भूमि ट्रस्ट।</p>
-          <a href="https://dainik-b.in/DXOOQS1Wc9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">नबिगड़े आर्थिक हालातों के लिए आरबीआई ने बनाई योजना</p>
+          <a href="https://dainik-b.in/EdTdst9mg9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">6.</h5>
-          <p class="card-text"> ई पोर्टल से जुड़े लोग सीधे अफसर और सरकारी मंत्रियों के आगे रख सकेंगे अपनी समस्या।</p>
-          <a href="https://dainik-b.in/jos1B5Ijc9" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> फेसबुक शुरू करेगा फेसबुक न्यूज सर्विस</p>
+          <a href="https://dainik-b.in/omYZfLm5f9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
