--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">नेशनल टेस्टिंग एजेंसी ने जारी किए नीट यू जी एडमिट कार्ड।</p>
-          <a href="https://dainik-b.in/vks6Eqoag9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">5 राफेल विमान एयरफोर्स में जल्द शामिल होंगे।</p>
+          <a href="https://dainik-b.in/xBLatQHij9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">उबर ने शुरू की ऑटो रेंटल सेवा।</p>
-          <a href="https://dainik-b.in/E7a8AGIcg9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">सरकारी स्कूल को दिलाया प्राइवेट का दर्जा।</p>
+          <a href="https://dainik-b.in/6o6Xs7ypj9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">महिला समानता दिवस।</p>
-          <a href="https://dainik-b.in/yXAluRjjd9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">स्टैच्यू ऑफ इक्विलिटी।</p>
+          <a href="https://dainik-b.in/Xt5NNTOZi9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text">बीएस 6 इंजन वाली जैज और माराजो हुई लॉन्च</p>
-          <a href="https://dainik-b.in/OnxDIl2hg9" class="btn btn-primary">Learn More</a>
+          <p class="card-text"> NATA की दूसरी परीक्षा की तारीख घोषित हुई।</p>
+          <a href="https://dainik-b.in/299HjjDIj9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     
@@ -64,8 +64,8 @@
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">6.</h5>
-          <p class="card-text"> फेसबुक शुरू करेगा फेसबुक न्यूज सर्विस</p>
-          <a href="https://dainik-b.in/omYZfLm5f9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">LG ने इलेक्ट्रॉनिक फेस मास्क लांच किया।</p>
+          <a href="https://dainik-b.in/05TMfUEij9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
