--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">1.</h5>
-          <p class="card-text">5 राफेल विमान एयरफोर्स में जल्द शामिल होंगे।</p>
-          <a href="https://dainik-b.in/xBLatQHij9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">कश्मीर में सेना को बड़ी कमियाबी</p>
+          <a href="https://dainik-b.in/QfGJsP3jq9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">2.</h5>
-          <p class="card-text">सरकारी स्कूल को दिलाया प्राइवेट का दर्जा।</p>
-          <a href="https://dainik-b.in/6o6Xs7ypj9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">जेईई की परीक्षा आज से हुई शुरू</p>
+          <a href="https://dainik-b.in/qnOdmxpWp9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">3.</h5>
-          <p class="card-text">स्टैच्यू ऑफ इक्विलिटी।</p>
-          <a href="https://dainik-b.in/Xt5NNTOZi9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">श्रीनगर सीआरपीएफ की कमान चारु सिन्हा को सौंपी गई</p>
+          <a href="https://dainik-b.in/cfMmFBeXp9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">4.</h5>
-          <p class="card-text"> NATA की दूसरी परीक्षा की तारीख घोषित हुई।</p>
-          <a href="https://dainik-b.in/299HjjDIj9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">संसद का मानसून सत्र अगले महीने</p>
+          <a href="https://dainik-b.in/mmxY1Pk0o9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     
     <div class="card">
         <div class="card-body">
           <h5 class="card-title">5.</h5>
-          <p class="card-text">नबिगड़े आर्थिक हालातों के लिए आरबीआई ने बनाई योजना</p>
-          <a href="https://dainik-b.in/EdTdst9mg9" class="btn btn-primary">Learn More</a>
+          <p class="card-text">एमबीबीएस में पड़ना होगा कोविड मैनेजमेंटा</p>
+          <a href="https://dainik-b.in/MSr5Waprp9" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
